infra/services/wg.yaml
---
# Source: wireguard/charts/wireguard/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: "wireguard-wireguard"
  labels:
    app: "wireguard-wireguard"
spec:
  type: ClusterIP
  ports:
    - name: wg
      protocol: UDP
      port: 51820
      targetPort: 51820
  selector:
    app: "wireguard-wireguard"
---
# Source: wireguard/charts/wireguard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "wireguard-wireguard"
  labels:
    role: vpn

spec:
  selector:
    matchLabels:
      app: "wireguard-wireguard"
  strategy: 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: a169fe32cc66f4097660fb23793224bcba788f09176d8950eefb0f425ab94cd7
      labels:
        app: "wireguard-wireguard"
        role: vpn
    spec:      
      serviceAccountName: wireguard-sa
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: "wireguard-wireguard"
          matchLabelKeys:
            - pod-template-hash
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true        
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: 'wireguard-wireguard'
                role: vpn
            topologyKey: kubernetes.io/hostname
      containers:
        - name: wireguard
          image: "ghcr.io/bryopsida/wireguard:main"
          imagePullPolicy: "Always"
          ports:
          - containerPort: 51820
            protocol: UDP
            name: wireguard
          securityContext: 
            
            capabilities:
              drop:
                - ALL
              add:
                - NET_ADMIN
                - NET_RAW
                - SETUID
                - SETGID
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: true
            privileged: false
          resources: 
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          startupProbe: 
            exec:
              command:
              - /bin/sh
              - -c
              - 'ip link show dev wg0 | grep -s up'
            periodSeconds: 2
            failureThreshold: 15
          readinessProbe: 
            exec:
              command:
              - /bin/sh
              - -c
              - 'ip link show dev wg0 | grep -s up'
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe: 
            exec:
              command:
              - /bin/sh
              - -c
              - 'ip link show dev wg0 | grep -s up'
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
          - name: run
            mountPath: /run
          - name: config
            mountPath: /etc/wireguard/wg0.conf
            subPath: "wg0.conf"
          - name: privatekey
            mountPath: /etc/wireguard/privatekey
            subPath: privatekey
      volumes:
      - name: run
        emptyDir: {}
      - name: config
        secret:
          secretName: "wireguard-wg-config"
      - name: privatekey
        secret:
          secretName: "wireguard-wg-generated"
---
# Source: wireguard/charts/wireguard/templates/tests/client-connect.yaml
# kics-scan ignore
