infra/services/wiki.yaml
---
# Source: wiki/charts/wiki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-wiki
  namespace: wiki
  labels:
    helm.sh/chart: wiki-2.2.0
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: matrix
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: http
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: matrix
---
# Source: wiki/charts/wiki/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-wiki
  namespace: wiki
  labels:
    helm.sh/chart: wiki-2.2.0
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: matrix
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiki
      app.kubernetes.io/instance: matrix
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiki
        app.kubernetes.io/instance: matrix
    spec:
      serviceAccountName: matrix-wiki
      securityContext: {}
      containers:
        - name: wiki
          securityContext: {}
          image: "requarks/wiki:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources: {}
---
# Source: wiki/charts/wiki/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "matrix-wiki-test-connection"
  namespace: wiki
  labels:
    helm.sh/chart: wiki-2.2.0
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: matrix
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ["wget"]
      args: ["matrix-wiki:80"]
  restartPolicy: Never
