infra/services/wireguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - name: wireguard
          image: linuxserver/wireguard:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true # Permet d'exécuter sysctl et iptables
          ports:
            - containerPort: 51820
          volumeMounts:
            - mountPath: "/config/wg_confs/"
              name: wireguard-config
      volumes:
        - name: wireguard-config
          emptyDir: {}
        - name: wireguard-secret
          secret:
            secretName: wireguard
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: vpn
spec:
  ports:
    - name: wireguard
      port: 51820
      protocol: UDP
      targetPort: 51820
  selector:
    app: wireguard
  type: ClusterIP
