infra/services/element.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  namespace: element
spec:
  selector:
    matchLabels:
      app: element
  replicas: 1
  template:
    metadata:
      labels:
        app: element
    spec:
      containers:
      - name: element
        image: docker.io/bubuntux/element-web:latest
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.json
          subPath: config.json
        ports:
        - containerPort: 80
          name: element
          protocol: TCP
        readinessProbe:
            httpGet:
                path: /
                port: element
            initialDelaySeconds: 2
            periodSeconds: 3
        livenessProbe:
            httpGet:
                path: /
                port: element
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
      - name: config-volume
        configMap:
          name: element-config
---
apiVersion: v1
kind: Service
metadata:
  name: element
  namespace: element
spec:
  selector:
    app: element
  ports:
    - name: default
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: element-ingress
  namespace: element
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tym.myr-project.eu`)
      kind: Rule
      services:
        - name: element
          port: 80
  # tls:
  #   secretName: vw-ingressroute-certificate
