infra/services/kanidm.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidmd
  namespace: kanidm
spec:
  selector:
    app: kanidmd
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kanidm-ingress
  namespace: kanidm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.myr-project.eu`)
      kind: Rule
      services:
        - name: kanidmd
          port: 8443
          scheme: https
          passHostHeader: true
          serversTransport: server-transport-kanidm
  tls:
    secretName: kanidm-ingressroute-certificate

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanidmd
  namespace: kanidm
  labels:
    app: kanidmd
spec:
  selector:
    matchLabels:
      app: kanidmd
  template:
    metadata:
      labels:
        app: kanidmd
    spec:
      containers:
        - name: kanidmd
          image: kanidm/server:1.5.0
          livenessProbe:
            httpGet:
              path: /status
              port: https
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 5
          ports:
            - containerPort: 8443
              name: https
            - containerPort: 3636
              name: ldaps
          volumeMounts:
            - name: kanidmd-db
              mountPath: /data
              readOnly: false
            - name: kanidmd-server-toml
              mountPath: /data/server.toml
              subPath: server.toml
              readOnly: true
            - name: kanidmd-certs
              mountPath: /certs
              readOnly: true
            - name: socket-volume
              mountPath: /var/run
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
                - NET_BIND_SERVICE
                - CHOWN
                - SETUID
                - SETGID
                - FOWNER
                - DAC_OVERRIDE
              drop:
                - ALL
          #resources:
          #limits:
          #cpu: "1"
          #memory: 1536Mi
          #requests:
          #cpu: "250m"
          #memory: 256Mi
      volumes:
        - name: kanidmd-db
          persistentVolumeClaim:
            claimName: kanidmd-db
        - name: kanidmd-certs
          secret:
            secretName: kanidm-ingressroute-certificate
        - name: kanidmd-server-toml
          configMap:
            name: kanidmd-server-toml
        - name: socket-volume
          emptyDir: {}
