infra/services/minio.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:latest
    command:
    - /bin/bash
    - -c
    args: 
    - minio server /data --console-address :9090
    volumeMounts:
    - mountPath: /data
      name: minio-storage
  volumes:
  - name: minio-storage
    persistentVolumeClaim:
      claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  selector:
    app: minio
  ports:
  - name: http
    port: 9090
    targetPort: 9090
  - name: console
    port: 9091
    targetPort: 9091
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.myr-project.eu`)
      kind: Rule
      services:
        - name: minio-service
          port: 9090
  tls:
    secretName: minio-ingressroute-certificate
