infra/services/vaultwarden.yaml
---
# Source: traefik/charts/vaultwarden/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnpg-vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    helm.sh/chart: vaultwarden-0.31.6
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/version: "1.33.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/component: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: cnpg
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 8080
  ipFamilyPolicy: SingleStack
---
# Source: traefik/charts/vaultwarden/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cnpg-vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    helm.sh/chart: vaultwarden-0.31.6
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/version: "1.33.2"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: vaultwarden
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vaultwarden
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/instance: cnpg
  template:
    metadata:
      labels:
        app.kubernetes.io/component: vaultwarden
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: cnpg
      annotations:
        checksum/config: cb3be9177e102d7aec2049ba0f1a3999ddb0840d
        checksum/secret: 2e59b80e86cef29e47b2e9ebddcb64daa9ed0cac
    spec:
      containers:
        - image: docker.io/vaultwarden/server:1.33.2-alpine
          imagePullPolicy: IfNotPresent
          name: vaultwarden
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      serviceAccountName: vaultwarden-svc
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
---
# Source: traefik/charts/vaultwarden/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnpg-vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    helm.sh/chart: vaultwarden-0.31.6
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/version: "1.33.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "25"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "pass.myr-project.eu"
      secretName:
  rules:
    - host: "pass.myr-project.eu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cnpg-vaultwarden
                port:
                  name: "http"
